# mvp-qaic-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml  rxconfig.py
00_OPERATOR_SHORTCUTS/: START_MVP_QAIC_SERVER_CURRENT.ps1  STATUS_MVP_QAIC_SERVER_8080.ps1
config/: reflex_runtime_policy.json
docs/: MIGRATION_DECISION_OVERLAY.json  MIGRATION_DECISION_QUEUE.json  MIGRATION_GLOBAL_MATRIX.json  MIGRATION_GLOBAL_MATRIX.md  MIGRATION_GLOBAL_MATRIX_SUMMARY.json  MIGRATION_OS_LIVE_PAYLOAD.json  MIGRATION_OS_REFRESH_SIGNAL.txt  MIGRATION_TRACKER.json  MIGRATION_TRACKER.md  MVPQAIC_CLASP_IMPORTS_ALL.csv  MVPQAIC_CLASP_IMPORTS_ALL_HEADERS.csv  MVP_QAIC_BRAND_ASSETS_INSTRUCTIONS.md  MVP_QAIC_P173_BASELINE_FRAME.md  MVP_QAIC_UI_MASTER_STATE.md  P237C_ROOT_LOCK_EXPORT_HYGIENE_POLICY.md  P59C_DEV_INTENT.md  P_REFLEX_12E_R2_AUTO_TRACKERS_SVG_VIEWER.md  P_REFLEX_12F_R11_MIGRATION_OS_STABLE_TABLE_CONTRACT.md  P_REFLEX_12F_R14_BACKWARD_COMPAT_MIGRATION_OS.md  P_REFLEX_12F_R15_MIGRATION_OS_BACKCOMPAT_FINAL_SEAL.md  P_REFLEX_12F_R18_TRACKER_UI_AND_DATA_AUDIT.md  P_REFLEX_12F_R9B_VISIBLE_TRACKER_ESSENTIAL_ONLY.md  P_REFLEX_12G0_R4B_COPY_PAYLOAD_SAFE.md  TOOL_REGISTRY_CDC.md  TOOL_REGISTRY_CHANGELOG.md  TOOL_REGISTRY_SCHEMA.md  TRACKER_AUTO_UPDATE_SNAPSHOT.json  TRACKER_AUTO_UPDATE_SNAPSHOT.md  WEB_ARCHITECTURE_CDC.md  WEB_ARCHITECTURE_SITEMAP.json
mvp_qaic_py/: cockpit_queue_data_contract_r21k.py  cockpit_queue_local_preview_r21n.py  cockpit_queue_model_binding_r21l.py  cockpit_queue_visual_planning_r21m.py  daily_run_registry.py  final_docs_planning_pack.py  gem_daily_loop_smoke.py  (+145 more)
(+1742 files in other folders)
